--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,7 +44,9 @@ jobs:
 
       - name: GH Pages deploy
         uses: Cecilapp/GitHub-Pages-deploy@3.2.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           email: 'anton@anton.eco'
-          build_dir: './dist'
+          build_dir: 'dist'
           commit_message: 'deploy pages'
