--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.1
+        with:
+          node-version: latest
 
       - name: Install dependencies
         run: npm ci
@@ -27,26 +29,12 @@ jobs:
         run: npm run build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: dist
           path: ./dist
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
-          path: ./dist
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
-      - name: GH Pages deploy
-        uses: Cecilapp/GitHub-Pages-deploy@3.2.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          email: anton@anton.eco
-          build_dir: dist
-          commit_message: deploy pages
