--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout 'pages' branch
         uses: actions/checkout@v4
         with:
-          ref: 'main/page'
+          ref: 'page'
 
       - run: rm -rf *
 
