--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,14 +31,14 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: github-pages
+          name: page
           path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout 'pages' branch
+      - name: Checkout 'page' branch
         uses: actions/checkout@v4
         with:
           ref: 'page'
@@ -48,7 +48,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: github-pages
+          name: page
           path: ./dist
 
       - name: Move files
@@ -62,7 +62,9 @@ jobs:
           git config user.email "anton@anton.eco"
 
       - name: Commit and push
+        env:
+          CV_TOKEN: ${{ secrets.CV_TOKEN }}
         run: |
           git add -A
-          git commit -m "Update pages branch [skip ci]" || exit 0
-          git push origin HEAD:page
+          git commit -m "Update page branch [skip ci]" || exit 0
+          git push https://${CV_TOKEN}@github.com/hrsa/cv.git origin HEAD:page
